--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 *.md filter=lfs diff=lfs merge=lfs -text
 /CNAME filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
+*.html filter=lfs diff=lfs merge=lfs -text
+*.js filter=lfs diff=lfs merge=lfs -text
+*.css filter=lfs diff=lfs merge=lfs -text
