--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.css filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
